enum ProjectStatus {
  ACTIVE
  PAUSED
  COMPLETED
  CANCELED
  NO_RESOURCES
}
